asset/Deployment/K8/Istio/tito-full-2-versions.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: titosql
  labels:
    name: tito-sql
    version: "1.5"
    app: tito
    stage: prod
    tier: backend
spec:
  replicas: 1
  minReadySeconds: 5
  strategy: 
    type: Recreate
  selector:
    matchLabels:
      tier: backend
      app: tito
  template:
    metadata:
      labels:
        tier: backend
        app: tito
    spec:
      containers:
      - name: tito-sql
        image: vmeoc/tito-sql:V1.5
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: tito-sql-service
  labels:
    app: tito
    tier: backend
    stage: prod
spec:
  ports:
      - port: 3306               # port expose par docker  (pas le port dans le container)
  selector:                     # key/value, label permettant de definir le pod cible (doit etre danslabels du pod)
    tier: backend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: titofe
  labels:
    name: tito-fe
    version: V1
    app: tito
    tier: frontend
    stage: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      type: tito-fe
      version: V1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tito
        type: tito-fe
        version: V1
        tier: frontend
    spec:
      containers:
        - name: tito
          image: vmeoc/tito-fe:V1.9.4
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: titofe-service
  labels:
    app: tito
    tier: frontend
    stage: prod
    version: V1
spec:
  ports:
  - name: http
    port: 80               # port expose par docker  (pas le port dans le container)
  selector:                # key/value, label permettant de definir le pod cible (doit etre danslabels du pod)
    type: tito-fe
    tier: frontend
  type: LoadBalancer
---
#Second version for Istio demo
apiVersion: apps/v1
kind: Deployment
metadata:
  name: titofe-v05
  labels:
    name: tito-fe
    version: V05
    app: tito
    tier: frontend
    stage: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      type: tito-fe
      version: V05
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tito
        type: tito-fe
        version: V05
        tier: frontend
    spec:
      containers:
        - name: tito
          image: vmeoc/tito-fe:V1.9.4
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
